@@ -2,6 +2,8 @@
 
 	* support/regression/tests/bitfields-nibbles.c:
 	  Test from patch #373 by Visenri.
+	* src/SDCCpeeph.c:
+	  Peephole optimizer helper function refactoring, from patch #362 by Visenri.
 
 2021-05-27 Philipp Klaus Krause <pkk AT spth.de>
 
